fixed some spacing on title and icons

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -48,8 +48,8 @@ span{
 .rep i{
 font-size:36px;
 color:#2E4359;
-padding-left:12px;
-line-height:25px;
+padding-left:15px;
+line-height:35px;
 }
 
 .rep i:hover{
@@ -75,7 +75,7 @@ div.D{
   margin-left: auto;
   margin-right: auto;
   width:100%;
-  min-height:180px;
+  min-height:160px;
     -webkit-box-shadow: 0px 9px 30px -7px rgba(0,0,0,0.68);
 -moz-box-shadow: 0px 9px 30px -7px rgba(0,0,0,0.68);
 box-shadow: 0px 9px 30px -7px rgba(0,0,0,0.68);
@@ -84,6 +84,10 @@ box-shadow: 0px 9px 30px -7px rgba(0,0,0,0.68);
 .rep span{
       font-family:BebasNeueBold; 
       font-size:20px;
+}
+
+div.icons{
+  margin-top:15px;
 }
 
 .face {
@@ -107,6 +111,10 @@ a.navbar-brand{
 
 .navbar-default .navbar-brand {
     color:#000;
+}
+
+.container > .navbar-header{
+  margin-left: 15px;
 }
 
 /* Custom page CSS
